@@ -25,8 +25,14 @@ ACLOCAL_AMFLAGS = -I m4
 gettextsrcdir = $(datadir)/gettext
 gettextsrc_DATA = ABOUT-NLS
 
-EXTRA_DIST = BUGS DISCLAIM README.gemtext aclocal.sh
 SUBDIRS = doc intl lib src po m4 misc tests
+
+MAINTAINERCLEANFILES = djgpp/README djgpp/config.sed djgpp/fnchange.lst
+EXTRA_DIST = BUGS DISCLAIM README.gemtext aclocal.sh \
+             djgpp/Makefile.maint djgpp/README.in djgpp/config.bat \
+             djgpp/config.in djgpp/config.site djgpp/edtests.bat \
+             djgpp/fnchange.in djgpp/tscript.sed \
+             $(MAINTAINERCLEANFILES)
 
 ABOUT-NLS: $(srcdir)/doc/nls.texi $(srcdir)/doc/matrix.texi
 	rm -f $(srcdir)/ABOUT-NLS \
